--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <!-- Incluye Bootstrap JS y Popper.js (necesarios para algunos componentes de Bootstrap) -->
+  <!-- Incluye Bootstrap JS y Popper.js (necesarios para algunos de los componentes de Bootstrap) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
   <script>
