--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grabación de pantalla</title>
+  <title>Grabación de pantalla y micrófono</title>
   <!-- Incluye Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -14,6 +14,9 @@
       <div class="col-12 col-md-6">
         <button id="startButton" class="btn btn-primary btn-lg mb-3">Iniciar Grabación</button>
         <button id="pauseButton" class="btn btn-secondary btn-lg">Pausar/Reanudar</button>
+        <select id="audioSource" class="form-select mt-3">
+          <option value="">Seleccionar micrófono</option>
+        </select>
       </div>
     </div>
   </div>
@@ -24,24 +27,47 @@
   <script>
     const $button = document.querySelector('#startButton');
     const $pauseButton = document.querySelector('#pauseButton');
+    const $audioSource = document.querySelector('#audioSource');
 
-    let media;
     let mediarecorder;
 
-    $button.addEventListener('click', async () => {
+    async function getAudioSources() {
+      const devices = await navigator.mediaDevices.enumerateDevices();
+      const audioSources = devices.filter(device => device.kind === 'audioinput');
+      
+      $audioSource.innerHTML = '<option value="">Seleccionar micrófono</option>';
+      audioSources.forEach((source, index) => {
+        const option = document.createElement('option');
+        option.value = source.deviceId;
+        option.text = source.label || `Microphone ${index + 1}`;
+        $audioSource.appendChild(option);
+      });
+    }
+
+    async function startRecording() {
       try {
-        media = await navigator.mediaDevices.getDisplayMedia({
+        const audioSourceId = $audioSource.value;
+        const audioConstraints = audioSourceId ? { audio: { deviceId: { exact: audioSourceId } } } : { audio: true };
+        const audioMedia = await navigator.mediaDevices.getUserMedia(audioConstraints);
+        
+        const displayMedia = await navigator.mediaDevices.getDisplayMedia({
           video: { frameRate: { ideal: 30 } },
           audio: true,
         });
 
-        mediarecorder = new MediaRecorder(media, {
+        const combinedStream = new MediaStream([
+          ...displayMedia.getVideoTracks(),
+          ...displayMedia.getAudioTracks(),
+          ...audioMedia.getAudioTracks()
+        ]);
+
+        mediarecorder = new MediaRecorder(combinedStream, {
           mimeType: 'video/webm;codecs=vp8,opus',
         });
 
         mediarecorder.start();
 
-        const [video] = media.getVideoTracks();
+        const [video] = combinedStream.getVideoTracks();
         video.addEventListener('ended', () => {
           mediarecorder.stop();
         });
@@ -55,6 +81,11 @@
       } catch (error) {
         console.error('Error al obtener la pantalla y el audio:', error);
       }
+    }
+
+    $button.addEventListener('click', async () => {
+      await getAudioSources();
+      startRecording();
     });
 
     $pauseButton.addEventListener('click', () => {
@@ -64,6 +95,9 @@
         mediarecorder.resume();
       }
     });
+
+    getAudioSources();
   </script>
 </body>
 </html>
+
